src/objects/Sales_Forecast__c.object
<CustomObject>
    <description>Used in Russia</description>
    <fields>
        <fullName>ATL_Sold_Last_30_Days__c</fullName>
        <formula>Account_Name__r.STST_TOT_L30_D_DD_Abut_Atlantis__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ATL Sold Last 30 Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sales Forecasts</relationshipLabel>
        <relationshipName>Sales_Forecasts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Account_Strategy__c</fullName>
        <formula>Account_Name__r.Account_Strategy_Implants__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Strategy (Implants)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Est_ATL_Abut_Apr__c</fullName>
        <label>Est ATL Abut Apr</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Est_ATL_Abut_Aug__c</fullName>
        <label>Est ATL Abut Aug</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Est_ATL_Abut_CY__c</fullName>
        <formula>Est_ATL_Abut_Jan__c +
 Est_ATL_Abut_Feb__c+
 Est_ATL_Abut_Mar__c +
 Est_ATL_Abut_Apr__c +
 Est_ATL_Abut_May__c +
 Est_ATL_Abut_Jun__c +
 Est_ATL_Abut_Jul__c +
 Est_ATL_Abut_Aug__c +
 Est_ATL_Abut_Sep__c+
 Est_ATL_Abut_Oct__c +
 Est_ATL_Abut_Nov__c +
 Est_ATL_Abut_Dec__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Auto Calculated</inlineHelpText>
        <label>Est ATL Abut CY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Est_ATL_Abut_Dec__c</fullName>
        <label>Est ATL Abut Dec</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Est_ATL_Abut_Feb__c</fullName>
        <label>Est ATL Abut Feb</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Est_ATL_Abut_Jan__c</fullName>
        <label>Est ATL Abut Jan</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Est_ATL_Abut_Jul__c</fullName>
        <label>Est ATL Abut Jul</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Est_ATL_Abut_Jun__c</fullName>
        <label>Est ATL Abut Jun</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Est_ATL_Abut_Mar__c</fullName>
        <label>Est ATL Abut Mar</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Est_ATL_Abut_May__c</fullName>
        <label>Est ATL Abut May</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Est_ATL_Abut_Nov__c</fullName>
        <label>Est ATL Abut Nov</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Est_ATL_Abut_Oct__c</fullName>
        <label>Est ATL Abut Oct</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Est_ATL_Abut_Sep__c</fullName>
        <label>Est ATL Abut Sep</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Est_Implants_Apr__c</fullName>
        <label>Est Implants Apr</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Est_Implants_Aug__c</fullName>
        <label>Est Implants Aug</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Est_Implants_CY__c</fullName>
        <formula>Est_Implants_Jan__c +Est_Implants_Feb__c + Est_Implants_Mar__c  +Est_Implants_Apr__c  +Est_Implants_May__c  +Est_Implants_Jun__c + Est_Implants_Jul__c  +Est_Implants_Aug__c  +Est_Implants_Sep__c  +Est_Implants_Oct__c  +Est_Implants_Nov__c  +Est_Implants_Dec__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Auto Calculated</inlineHelpText>
        <label>Est Implants CY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Est_Implants_Dec__c</fullName>
        <label>Est Implants Dec</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Est_Implants_Feb__c</fullName>
        <label>Est Implants Feb</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Est_Implants_Jan__c</fullName>
        <label>Est Implants Jan</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Est_Implants_Jul__c</fullName>
        <label>Est Implants Jul</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Est_Implants_Jun__c</fullName>
        <label>Est Implants Jun</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Est_Implants_Mar__c</fullName>
        <label>Est Implants Mar</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Est_Implants_May__c</fullName>
        <label>Est Implants May</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Est_Implants_Nov__c</fullName>
        <label>Est Implants Nov</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Est_Implants_Oct__c</fullName>
        <label>Est Implants Oct</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Est_Implants_Q1__c</fullName>
        <formula>Est_Implants_Jan__c + Est_Implants_Feb__c + Est_Implants_Mar__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Est Implants Q1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Est_Implants_Q2__c</fullName>
        <formula>Est_Implants_Apr__c + Est_Implants_May__c +  Est_Implants_Jun__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Est Implants Q2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Est_Implants_Q3__c</fullName>
        <formula>Est_Implants_Jul__c + Est_Implants_Aug__c + Est_Implants_Sep__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Est Implants Q3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Est_Implants_Sep__c</fullName>
        <label>Est Implants Sep</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Est_Sales_CY__c</fullName>
        <inlineHelpText>Value</inlineHelpText>
        <label>Est Sales CY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Forecast_Year__c</fullName>
        <label>Forecast Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2013</fullName>
                </value>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Implant_Brand__c</fullName>
        <description>Used by Russia to add which Implant System customer is using.</description>
        <label>Implant Brand</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ankylos</fullName>
                </value>
                <value>
                    <fullName>Astra Tech Implant System</fullName>
                </value>
                <value>
                    <fullName>XiVE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Movex_Status__c</fullName>
        <formula>Account_Name__r.Movex_Status_indicator__c</formula>
        <label>Movex Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Movex__c</fullName>
        <formula>Account_Name__r.Movex__c</formula>
        <label>Movex #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reported_Implants_Apr__c</fullName>
        <inlineHelpText>To be filled in by Sales Rep weekly.</inlineHelpText>
        <label>Reported Implants Apr</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reported_Implants_Aug__c</fullName>
        <inlineHelpText>To be filled in by Sales Rep weekly.</inlineHelpText>
        <label>Reported Implants Aug</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reported_Implants_Dec__c</fullName>
        <inlineHelpText>To be filled in by Sales Rep weekly.</inlineHelpText>
        <label>Reported Implants Dec</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reported_Implants_Feb__c</fullName>
        <inlineHelpText>To be filled in by Sales Rep weekly.</inlineHelpText>
        <label>Reported Implants Feb</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reported_Implants_Jan__c</fullName>
        <inlineHelpText>To be filled in by Sales Rep weekly.</inlineHelpText>
        <label>Reported Implants Jan</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reported_Implants_Jul__c</fullName>
        <inlineHelpText>To be filled in by Sales Rep weekly.</inlineHelpText>
        <label>Reported Implants Jul</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reported_Implants_Jun__c</fullName>
        <inlineHelpText>To be filled in by Sales Rep weekly.</inlineHelpText>
        <label>Reported Implants Jun</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reported_Implants_Mar__c</fullName>
        <inlineHelpText>To be filled in by Sales Rep weekly.</inlineHelpText>
        <label>Reported Implants Mar</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reported_Implants_May__c</fullName>
        <inlineHelpText>To be filled in by Sales Rep weekly.</inlineHelpText>
        <label>Reported Implants May</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reported_Implants_Nov__c</fullName>
        <inlineHelpText>To be filled in by Sales Rep weekly.</inlineHelpText>
        <label>Reported Implants Nov</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reported_Implants_Oct__c</fullName>
        <inlineHelpText>To be filled in by Sales Rep weekly.</inlineHelpText>
        <label>Reported Implants Oct</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reported_Implants_Sep__c</fullName>
        <inlineHelpText>To be filled in by Sales Rep weekly.</inlineHelpText>
        <label>Reported Implants Sep</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_CY__c</fullName>
        <formula>Account_Name__r.TS_CY_D_AllPLs_AllPCs_AllBrands__c</formula>
        <label>Total Sales CY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_LYTD__c</fullName>
        <formula>Account_Name__r.TS_CY_1_TD_D_AllPLs_AllPCs_AllBrands__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Sales LYTD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_LY__c</fullName>
        <formula>Account_Name__r.TS_CY_1_D_AllPLs_AllPCs_AllBrands__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Sales LY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sold_ATL_Abut_Apr__c</fullName>
        <label>Sold ATL Abut Apr</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sold_ATL_Abut_Aug__c</fullName>
        <label>Sold ATL Abut Aug</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sold_ATL_Abut_Dec__c</fullName>
        <label>Sold ATL Abut Dec</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sold_ATL_Abut_Feb__c</fullName>
        <label>Sold ATL Abut Feb</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sold_ATL_Abut_Jan__c</fullName>
        <label>Sold ATL Abut Jan</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sold_ATL_Abut_Jul__c</fullName>
        <label>Sold ATL Abut Jul</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sold_ATL_Abut_Jun__c</fullName>
        <label>Sold ATL Abut Jun</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sold_ATL_Abut_Mar__c</fullName>
        <label>Sold ATL Abut Mar</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sold_ATL_Abut_May__c</fullName>
        <label>Sold ATL Abut May</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sold_ATL_Abut_Nov__c</fullName>
        <label>Sold ATL Abut Nov</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sold_ATL_Abut_Oct__c</fullName>
        <label>Sold ATL Abut Oct</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sold_ATL_Abut_Sep__c</fullName>
        <label>Sold ATL Abut Sep</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sold_ATL_CY__c</fullName>
        <formula>Account_Name__r.TQ_CY_D_DD_Abuts_Atlantis__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sold ATL Abut CY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sold_ATL_LYTD__c</fullName>
        <formula>Account_Name__r.TQ_CY_1_TD_D_DD_Abuts_Atlantis__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sold ATL Abut LYTD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sold_ATL_LY__c</fullName>
        <formula>Account_Name__r.TQ_CY_1_D_DD_Abuts_Atlantis__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sold ATL Abut LY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sold_Implants_Apr__c</fullName>
        <label>Sold Implants Apr</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sold_Implants_Aug__c</fullName>
        <label>Sold Implants Aug</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sold_Implants_CY_RUS__c</fullName>
        <formula>Sold_Implants_Jan__c +  Sold_Implants_Feb__c + Sold_Implants_Mar__c + Sold_Implants_Apr__c + Sold_Implants_May__c + Sold_Implants_Jun__c + Sold_Implants_Jul__c + Sold_Implants_Aug__c + Sold_Implants_Sep__c +  Sold_Implants_Oct__c + Sold_Implants_Nov__c + Sold_Implants_Dec__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sold Implants CY (RU)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sold_Implants_CY__c</fullName>
        <formula>Account_Name__r.TQ_CY_D_DI_Implants_AllBrands__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sold Implants CY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sold_Implants_Dec__c</fullName>
        <label>Sold Implants Dec</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sold_Implants_Feb__c</fullName>
        <label>Sold Implants Feb</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sold_Implants_Jan__c</fullName>
        <label>Sold Implants Jan</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sold_Implants_Jul__c</fullName>
        <label>Sold Implants Jul</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sold_Implants_Jun__c</fullName>
        <label>Sold Implants Jun</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sold_Implants_LYTD__c</fullName>
        <formula>Account_Name__r.TQ_CY_1_TD_D_DI_Implants_AllBrands__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sold Implants LYTD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sold_Implants_LY_Apr__c</fullName>
        <label>Sold Implants LY Apr</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sold_Implants_LY_Aug__c</fullName>
        <label>Sold Implants LY Aug</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sold_Implants_LY_Dec__c</fullName>
        <label>Sold Implants LY Dec</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sold_Implants_LY_Feb__c</fullName>
        <label>Sold Implants LY Feb</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sold_Implants_LY_Jan__c</fullName>
        <label>Sold Implants LY Jan</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sold_Implants_LY_Jul__c</fullName>
        <label>Sold Implants LY Jul</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sold_Implants_LY_Jun__c</fullName>
        <label>Sold Implants LY Jun</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sold_Implants_LY_Mar__c</fullName>
        <label>Sold Implants LY Mar</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sold_Implants_LY_May__c</fullName>
        <label>Sold Implants LY May</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sold_Implants_LY_Nov__c</fullName>
        <label>Sold Implants LY Nov</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sold_Implants_LY_Oct__c</fullName>
        <label>Sold Implants LY Oct</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sold_Implants_LY_Sep__c</fullName>
        <label>Sold Implants LY Sep</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sold_Implants_LY__c</fullName>
        <formula>Account_Name__r.TQ_CY_1_D_DI_Implants_AllBrands__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sold Implants LY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sold_Implants_Mar__c</fullName>
        <label>Sold Implants Mar</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sold_Implants_May__c</fullName>
        <label>Sold Implants May</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sold_Implants_Nov__c</fullName>
        <label>Sold Implants Nov</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sold_Implants_Oct__c</fullName>
        <label>Sold Implants Oct</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sold_Implants_Q1__c</fullName>
        <formula>Sold_Implants_Jan__c + Sold_Implants_Feb__c + Sold_Implants_Mar__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sold Implants Q1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sold_Implants_Q2__c</fullName>
        <formula>Sold_Implants_Mar__c + Sold_Implants_Apr__c + Sold_Implants_Jun__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sold Implants Q2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sold_Implants_Q3__c</fullName>
        <formula>Sold_Implants_Jul__c + Sold_Implants_Aug__c + Sold_Implants_Sep__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sold Implants Q3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sold_Implants_Sep__c</fullName>
        <label>Sold Implants Sep</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Discount_CY__c</fullName>
        <formula>Account_Name__r.Total_Discount_CY__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Discount CY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <formula>Account_Name__r.BillingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Zip Code</label>
        <type>Text</type>
    </fields>
    <label>Sales Forecast</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>Zip_Code__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Est_ATL_Abut_CY__c</columns>
        <columns>Est_Implants_CY__c</columns>
        <columns>Est_Sales_CY__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Implants_Customers_Category_A_B_C_D</fullName>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>Est_Sales_CY__c</columns>
        <columns>Est_Implants_Jan__c</columns>
        <columns>Est_Implants_Feb__c</columns>
        <columns>Est_Implants_Mar__c</columns>
        <columns>Est_Implants_Apr__c</columns>
        <columns>Est_Implants_May__c</columns>
        <columns>Est_Implants_Jun__c</columns>
        <columns>Est_Implants_Jul__c</columns>
        <columns>Est_Implants_Aug__c</columns>
        <columns>Est_Implants_Sep__c</columns>
        <columns>Est_Implants_Oct__c</columns>
        <columns>Est_Implants_Nov__c</columns>
        <columns>Est_Implants_Dec__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Sales_Forecast__c.Customer_Forecast</value>
        </filters>
        <label>My Implants Customers - Category A\B\C\D</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Implants_Customers_Others</fullName>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>Est_Sales_CY__c</columns>
        <columns>Est_Implants_Jan__c</columns>
        <columns>Est_Implants_Feb__c</columns>
        <columns>Est_Implants_Mar__c</columns>
        <columns>Est_Implants_Apr__c</columns>
        <columns>Est_Implants_May__c</columns>
        <columns>Est_Implants_Jun__c</columns>
        <columns>Est_Implants_Jul__c</columns>
        <columns>Est_Implants_Aug__c</columns>
        <columns>Est_Implants_Sep__c</columns>
        <columns>Est_Implants_Oct__c</columns>
        <columns>Est_Implants_Nov__c</columns>
        <columns>Est_Implants_Dec__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Sales_Forecast__c.Customer_Forecast</value>
        </filters>
        <label>My Implants Customers - Others</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Lab_Customers_Category_A_B_C_D</fullName>
        <columns>Account_Name__c</columns>
        <columns>Est_Sales_CY__c</columns>
        <columns>Est_ATL_Abut_Jan__c</columns>
        <columns>Est_ATL_Abut_Feb__c</columns>
        <columns>Est_ATL_Abut_Mar__c</columns>
        <columns>Est_ATL_Abut_Apr__c</columns>
        <columns>Est_ATL_Abut_May__c</columns>
        <columns>Est_ATL_Abut_Jun__c</columns>
        <columns>Est_ATL_Abut_Jul__c</columns>
        <columns>Est_ATL_Abut_Aug__c</columns>
        <columns>Est_ATL_Abut_Sep__c</columns>
        <columns>Est_ATL_Abut_Oct__c</columns>
        <columns>Est_ATL_Abut_Nov__c</columns>
        <columns>Est_ATL_Abut_Dec__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Sales_Forecast__c.Lab_Customers_Forecast</value>
        </filters>
        <label>My Lab Customers - Category A\B\C\D</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Lab_Customers_Others</fullName>
        <columns>Account_Name__c</columns>
        <columns>Est_Sales_CY__c</columns>
        <columns>Est_ATL_Abut_Jan__c</columns>
        <columns>Est_ATL_Abut_Feb__c</columns>
        <columns>Est_ATL_Abut_Mar__c</columns>
        <columns>Est_ATL_Abut_Apr__c</columns>
        <columns>Est_ATL_Abut_May__c</columns>
        <columns>Est_ATL_Abut_Jun__c</columns>
        <columns>Est_ATL_Abut_Jul__c</columns>
        <columns>Est_ATL_Abut_Aug__c</columns>
        <columns>Est_ATL_Abut_Sep__c</columns>
        <columns>Est_ATL_Abut_Oct__c</columns>
        <columns>Est_ATL_Abut_Nov__c</columns>
        <columns>Est_ATL_Abut_Dec__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Sales_Forecast__c.Lab_Customers_Forecast</value>
        </filters>
        <label>My Lab Customers - Others</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Prospects</fullName>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>Zip_Code__c</columns>
        <columns>Account_Strategy__c</columns>
        <columns>Est_Sales_CY__c</columns>
        <columns>Est_Implants_CY__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Sales_Forecast__c.Prospect_Forecast</value>
        </filters>
        <label>My Prospects</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>RU_Sales_Forecast_2014</fullName>
        <columns>Account_Name__c</columns>
        <columns>NAME</columns>
        <columns>Est_Implants_CY__c</columns>
        <columns>Est_Implants_Jan__c</columns>
        <columns>Est_Implants_Feb__c</columns>
        <columns>Est_Implants_Mar__c</columns>
        <columns>Est_Implants_Apr__c</columns>
        <columns>Est_Implants_May__c</columns>
        <columns>Est_Implants_Jun__c</columns>
        <columns>Est_Implants_Jul__c</columns>
        <columns>Est_Implants_Aug__c</columns>
        <columns>Est_Implants_Sep__c</columns>
        <columns>Est_Implants_Oct__c</columns>
        <columns>Est_Implants_Nov__c</columns>
        <columns>Est_Implants_Dec__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Sales_Forecast__c.Customer_Forecast</value>
        </filters>
        <filters>
            <field>Movex__c</field>
            <operation>notContain</operation>
            <value>FR</value>
        </filters>
        <filters>
            <field>Forecast_Year__c</field>
            <operation>equals</operation>
            <value>2014</value>
        </filters>
        <label>RU: Sales Forecast 2014</label>
        <language>en_US</language>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>RU_Sales_Forecast_2016</fullName>
        <columns>Account_Name__c</columns>
        <columns>NAME</columns>
        <columns>Est_Implants_CY__c</columns>
        <columns>Est_Implants_Jan__c</columns>
        <columns>Est_Implants_Feb__c</columns>
        <columns>Est_Implants_Mar__c</columns>
        <columns>Est_Implants_Apr__c</columns>
        <columns>Est_Implants_May__c</columns>
        <columns>Est_Implants_Jun__c</columns>
        <columns>Est_Implants_Jul__c</columns>
        <columns>Est_Implants_Aug__c</columns>
        <columns>Est_Implants_Sep__c</columns>
        <columns>Est_Implants_Oct__c</columns>
        <columns>Est_Implants_Nov__c</columns>
        <columns>Est_Implants_Dec__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Forecast_Year__c</field>
            <operation>equals</operation>
            <value>2016</value>
        </filters>
        <label>RU: Sales Forecast 2016</label>
        <language>en_US</language>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>RU_Sales_Forecast_2019</fullName>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>Sold_Implants_Jan__c</columns>
        <columns>Sold_Implants_Feb__c</columns>
        <columns>Sold_Implants_Mar__c</columns>
        <columns>Sold_Implants_Apr__c</columns>
        <columns>Sold_Implants_May__c</columns>
        <columns>Sold_Implants_Jun__c</columns>
        <columns>Sold_Implants_Jul__c</columns>
        <columns>Sold_Implants_Aug__c</columns>
        <columns>Sold_Implants_Sep__c</columns>
        <columns>Sold_Implants_Oct__c</columns>
        <columns>Sold_Implants_Nov__c</columns>
        <columns>Sold_Implants_Dec__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Forecast_Year__c</field>
            <operation>equals</operation>
            <value>2019</value>
        </filters>
        <label>RU: Sales Forecast 2019</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>RU_Shared_Services</roleAndSubordinates>
        </sharedTo>
    </listViews>
</CustomObject>